--- a/four-card-feature-section-master/index.html
+++ b/four-card-feature-section-master/index.html
@@ -15,25 +15,31 @@
   </style>
 </head>
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
+  <div class="top-text">
+    <h1>Reliable, efficient delivery</h1>
+    <h2>Powered by Technology</h2>
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
-
-  Supervisor
-  Monitors activity to identify project roadblocks
-
-  Team Builder
-  Scans our talent network to create the optimal team for your project
-
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
+    <p>Our Artificial Intelligence powered tools use millions of project data points 
+      to ensure that your project is successful</p>
+  </div>
+  <div>
+    <div>
+      Supervisor
+      Monitors activity to identify project roadblocks
+    </div>
+    <div>
+      Team Builder
+      Scans our talent network to create the optimal team for your project
+    </div>
+    <div>
+      Karma
+      Regularly evaluates our talent to ensure quality
+    </div>
+    <div>
+      Calculator
+      Uses data from past projects to provide better delivery estimates
+    </div>
+  </div>
   
   <footer>
     <p class="attribution">
