--- a/four-card-feature-section-master/index.html
+++ b/four-card-feature-section-master/index.html
@@ -23,19 +23,21 @@
       to ensure that your project is successful</p>
   </div>
   <div>
-    <div>
+    <div class="content-box" id="sup">
       Supervisor
       Monitors activity to identify project roadblocks
     </div>
-    <div>
-      Team Builder
-      Scans our talent network to create the optimal team for your project
+    <div class="stacked-boxes">
+      <div class="content-box" id="team-builder">
+        Team Builder
+        Scans our talent network to create the optimal team for your project
+      </div>
+      <div class="content-box" id="karma">
+        Karma
+        Regularly evaluates our talent to ensure quality
+      </div>
     </div>
-    <div>
-      Karma
-      Regularly evaluates our talent to ensure quality
-    </div>
-    <div>
+    <div class="content-box" id="calc">
       Calculator
       Uses data from past projects to provide better delivery estimates
     </div>
