--- a/four-card-feature-section-master/index.html
+++ b/four-card-feature-section-master/index.html
@@ -18,25 +18,24 @@
 </head>
 <body>
   <div class="top-text">
-    <h1>Reliable, efficient delivery</h1>
-    <h2>Powered by Technology</h2>
-
-    <p>Our Artificial Intelligence powered tools use millions of project data points 
-      to ensure that your project is successful</p>
+    <div><h1>Reliable, efficient delivery</h1></div>
+    <div><h2>Powered by Technology</h2></div>
+    <div><p>Our Artificial Intelligence powered tools use millions of project data points 
+      to ensure that your project is successful</p></div>
   </div>
   <div>
     <div class="content-box" id="sup">
-      Supervisor
-      Monitors activity to identify project roadblocks
+      <h3>Supervisor</h3>
+      <p>Monitors activity to identify project roadblocks</p>
     </div>
     <div class="stacked-boxes">
       <div class="content-box" id="team-builder">
-        Team Builder
-        Scans our talent network to create the optimal team for your project
+        <h3>Team Builder</h3>
+        <p>Scans our talent network to create the optimal team for your project</p>
       </div>
       <div class="content-box" id="karma">
-        Karma
-        Regularly evaluates our talent to ensure quality
+        <h3>Karma</h3>
+        <p>Regularly evaluates our talent to ensure quality</p>
       </div>
     </div>
     <div class="content-box" id="calc">
