--- a/four-card-feature-section-master/index.html
+++ b/four-card-feature-section-master/index.html
@@ -18,9 +18,9 @@
 </head>
 <body>
   <div class="top-text">
-    <div><h1>Reliable, efficient delivery</h1></div>
-    <div><h2>Powered by Technology</h2></div>
-    <div><p>Our Artificial Intelligence powered tools use millions of project data points 
+    <div id="top-text-h1"><h1>Reliable, efficient delivery</h1></div>
+    <div id="top-text-h2"><h2>Powered by Technology</h2></div>
+    <div id="top-text-main"><p>Our Artificial Intelligence powered tools use millions of project data points 
       to ensure that your project is successful</p></div>
   </div>
   <div>
