--- a/four-card-feature-section-master/index.html
+++ b/four-card-feature-section-master/index.html
@@ -39,8 +39,8 @@
       </div>
     </div>
     <div class="content-box" id="calc">
-      Calculator
-      Uses data from past projects to provide better delivery estimates
+      <h3>Calculator</h3>
+      <p>Uses data from past projects to provide better delivery estimates</p>
     </div>
   </div>
   
