--- a/four-card-feature-section-master/index.html
+++ b/four-card-feature-section-master/index.html
@@ -23,7 +23,7 @@
     <div id="top-text-main"><p>Our Artificial Intelligence powered tools use millions of project data points 
       to ensure that your project is successful</p></div>
   </div>
-  <div>
+  <div class="content-boxes">
     <div class="content-box" id="sup">
       <h3>Supervisor</h3>
       <p>Monitors activity to identify project roadblocks</p>
