--- a/four-card-feature-section-master/index.html
+++ b/four-card-feature-section-master/index.html
@@ -25,22 +25,22 @@
   </div>
   <div class="content-boxes">
     <div class="content-box" id="sup">
-      <h3>Supervisor</h3>
-      <p>Monitors activity to identify project roadblocks</p>
+      <div><h3>Supervisor</h3></div>
+      <div><p>Monitors activity to identify project roadblocks</p></div>
     </div>
     <div class="stacked-boxes">
       <div class="content-box" id="team-builder">
-        <h3>Team Builder</h3>
-        <p>Scans our talent network to create the optimal team for your project</p>
+        <div><h3>Team Builder</h3></div>
+        <div><p>Scans our talent network to create the optimal team for your project</p></div>
       </div>
       <div class="content-box" id="karma">
-        <h3>Karma</h3>
-        <p>Regularly evaluates our talent to ensure quality</p>
+        <div><h3>Karma</h3></div>
+        <div><p>Regularly evaluates our talent to ensure quality</p></div>
       </div>
     </div>
     <div class="content-box" id="calc">
-      <h3>Calculator</h3>
-      <p>Uses data from past projects to provide better delivery estimates</p>
+      <div><h3>Calculator</h3></div>
+      <div><p>Uses data from past projects to provide better delivery estimates</p></div>
     </div>
   </div>
   
