--- a/four-card-feature-section-master/index.html
+++ b/four-card-feature-section-master/index.html
@@ -27,7 +27,7 @@
     <div class="content-box" id="sup">
       <div class="content-box-title"><h3>Supervisor</h3></div>
       <div class="content-box-body"><p>Monitors activity to identify project roadblocks</p></div>
-      <div><img src="icon-supervisor.svg"></div>
+      <div class="content-box-img"><img src="icon-supervisor.svg"></div>
     </div>
     <div class="stacked-boxes">
       <div class="content-box" id="team-builder">
