--- a/four-card-feature-section-master/index.html
+++ b/four-card-feature-section-master/index.html
@@ -27,21 +27,24 @@
     <div class="content-box" id="sup">
       <div class="content-box-title"><h3>Supervisor</h3></div>
       <div class="content-box-body"><p>Monitors activity to identify project roadblocks</p></div>
-      <div class="content-box-img"><img src="icon-supervisor.svg"></div>
+      <div class="content-box-img"><img src="images/icon-supervisor.svg"></div>
     </div>
     <div class="stacked-boxes">
       <div class="content-box" id="team-builder">
         <div class="content-box-title"><h3>Team Builder</h3></div>
         <div class="content-box-body"><p>Scans our talent network to create the optimal team for your project</p></div>
+        <div class="content-box-img"><img src="images/icon-team-builder.svg"></div>
       </div>
       <div class="content-box" id="karma">
         <div class="content-box-title"><h3>Karma</h3></div>
         <div class="content-box-body"><p>Regularly evaluates our talent to ensure quality</p></div>
+        <div class="content-box-img"><img src="images/icon-karma.svg"></div>
       </div>
     </div>
     <div class="content-box" id="calc">
       <div class="content-box-title"><h3>Calculator</h3></div>
       <div class="content-box-body"><p>Uses data from past projects to provide better delivery estimates</p></div>
+      <div class="content-box-img"><img src="images/icon-calculator.svg"></div>
     </div>
   </div>
   
